compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__value_imported_as_type.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "import gleam/foo.{type Baz}"
---
error: Unknown module type
  ┌─ /src/one/two.gleam:1:19
  │
1 │ import gleam/foo.{type Baz}
  │                   ^^^^^^^^ Did you mean `Baz`?

`Baz` is only a value, it cannot be imported as a type.
